--- a/CICD-PIPELINE-FOR-WEB-APPLICATION-master/CICD-PIPELINE-FOR-WEB-APPLICATION-master/index.html
+++ b/CICD-PIPELINE-FOR-WEB-APPLICATION-master/CICD-PIPELINE-FOR-WEB-APPLICATION-master/index.html
@@ -1,6 +1,6 @@
  <section id="about" style="max-width:900px; margin:auto; padding:40px; font-family:Arial;">
     <div style="text-align:center;">
-        <img src="C:\Users\shiva\OneDrive\Pictures\Documents\Documents\Desktop\3rd sem\DevOps\CICD-PIPELINE-FOR-WEB-APPLICATION-master\CICD-PIPELINE-FOR-WEB-APPLICATION-master\assets\images\profile.jpg" alt="Profile Photo" 
+        <img src="CICD-PIPELINE-FOR-WEB-APPLICATION-master/CICD-PIPELINE-FOR-WEB-APPLICATION-master/assets/images/profile.jpg" alt="Profile Photo" 
              style="width:180px; height:180px; border-radius:50%; object-fit:cover; border:4px solid #ffcc00;">
         <h1 style="margin-top:20px; font-size:32px; font-weight:700;">Nirmitha S</h1>
         <h3 style="color:#666;">M.Tech (2nd Year), Computer Science & Engineering<br>BNMIT College, Bengaluru</h3>
